--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="question" class="text-center fs-3 fw-bold mb-3">Whats your name?</div>
     <div id="questions" class="mb-3"></div>
     <button id="submit" class="btn btn-success btn-lg">Submit</button>
-<div class="fs-6 text-muted">select only one answer from the multiple choice list</div>
+<div class="fs-6 text-muted text-center ms-2">select only one answer from the listed</div>
   </div>
   <div class="bg-dark mt-5 text-white py-4">
   <div class="container">
