--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
     <button id="submit" class="btn btn-success btn-lg">Submit</button>
 <div class="fs-6 text-muted text-center ms-2">select only one answer from the listed</div>
   </div>
+
+  <center>
+      <div class="fw-light mb-1">your progress</div>
+  <div class="d-flex-row  align-content-center justify-content-center" style="width:90%">
+  <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+  <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" id="bar"></div>
+</div>
+</div>
+
+<!--footer -->
   <div class="bg-dark mt-5 text-white py-4">
   <div class="container">
     <div class="row justify-content-center">
